8970 task(style): fixes colour contrast issues

--- a/src/components/Checkbox/_checkbox.scss
+++ b/src/components/Checkbox/_checkbox.scss
@@ -29,7 +29,7 @@
 
   &:before {
     background-color: var(--color-white);
-    border: 1px solid var(--color-grey-20);
+    border: 1px solid var(--color-grey-60);
     border-radius: 2px;
     content: '';
     height: var(--checkbox-radio-size);
