--- a/src/components/SidebarSearch/_sidebar-search.scss
+++ b/src/components/SidebarSearch/_sidebar-search.scss
@@ -27,7 +27,7 @@
 
 .cc-sidebar-search__input {
   @extend %text-input-base;
-  border-color: var(--color-grey-30);
+
   height: calc(6.75 * var(--space-unit));
 }
 
