--- a/src/components/SocialShare/_social-share.scss
+++ b/src/components/SocialShare/_social-share.scss
@@ -32,9 +32,9 @@
 }
 
 .cc-social-share__icon {
-  border: 1px solid var(--color-grey-30);
+  border: 1px solid var(--color-grey-60);
   border-radius: 50%;
-  color: var(--color-grey-30);
+  color: var(--color-grey-60);
   height: 1.5rem;
   transition: all ease var(--transition-duration);
   width: 1.5rem;
